[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
grid = "0.13.0"
transpose = "0.2.2"
lazy_static = "1.4.0"
regex = "1.5.4"
itertools = "0.12.0"
